Enabled Preview feature for compilation, execution and testing